# quantitative_trading_system

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  EVOLUTION_LEDGER.md  LICENSE  Makefile  QUANTCORE_CLAUDE_CODE_PROMPT.md  README.md  README_WEB.md  _test_market_data.py  _test_sources.py  app.py  check_syntax.py  debug_file.py  dev.sh  main.py  minimal_app.py  pyproject.toml  pytest.ini  quantcore_frontend_redesign_prompt.md  requirements-test.txt  requirements.txt  run.sh  start.sh  test_deploy.py  test_engine.py  test_functional.py  test_imports.py  test_ml_utils.py  test_streamlit_context.py  使用教程.md
.streamlit/: config.toml
api/: ai_routes.py  analysis_routes.py  auth.py  backtest_routes.py  connection_manager.py  data_routes.py  duckdb_routes.py  errors.py  execution_routes.py  feature_routes.py  middleware.py  monitor_routes.py  platform_routes.py  portfolio_routes.py  research_routes.py  risk_routes.py  routes.py  strategy_routes.py  utils.py  websocket.py  websocket_manager.py
backtest/: engine.py  vectorized_engine.py
config/: settings.py
core/: __init__.py  adaptive_strategy.py  advanced_risk_analytics.py  alert_system.py  alpha_engine.py  alpha_screener.py  alternative_data.py  analysis_service.py  app_middleware.py  async_batch.py  attribution_engine.py  auto_auditor.py  backtest.py  backtest_jit.py  black_litterman.py  bugfixes.py  builtin_strategies.py  cache.py  chip_distribution.py  config.py  correlation.py  correlation_analysis.py  data_fetcher.py  data_governance.py  database.py  dependencies.py  drawdown_analysis.py  duckdb_analytics.py  duckdb_streaming.py  engine.py  engine_polars.py  event_bus.py  event_driven_backtest.py  events.py  execution_algorithms.py  execution_engine.py  factor_engine.py  factor_model.py  factor_pipeline.py  factor_validity.py  (+76 more)
data/: account.json  async_data_manager.py  data_cleaner.py  data_manager.py  index_data.py  market_calendar.py  market_detector.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
quantcore/: __init__.py  __main__.py
reports/: report_generator.py
risk/: __init__.py  advanced_risk_manager.py  drawdown_analyzer.py  risk_manager.py
static/: index.html
strategies/: __init__.py  advanced_strategies.py  base_strategy.py  example_ma_cross.py  ma_cross.py  strategy_manager.py  strategy_registry.py
strategy/: base.py
tests/: conftest.py  test_acceptance.py  test_adaptive_strategy.py  test_advanced_risk_analytics.py  test_alert_system.py  test_alpha_engine.py  test_alpha_screener.py  test_alternative_data.py  test_api.py  test_api_endpoints.py  (+92 more)
(+335 files in other folders)
