[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantitative-trading-system"
version = "1.0.0"
description = "Quantitative Trading System with Backtesting and Risk Management"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.3",
    "akshare==1.18.59",
    "baostock==0.9.1",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "requests==2.32.3",
    "pytz==2024.2",
    "pydantic-settings==2.6.1",
    "loguru==0.7.3",
    "aiohttp==3.11.0",
    "uvloop==0.21.0",
    "httptools==0.7.1",
    "psutil==6.1.0",
    "PyJWT==2.10.0",
    "python-multipart==0.0.20",
    "bcrypt==4.3.0",
    "torch==2.5.1",
    "statsmodels==0.14.4",
    "cvxpy==1.6.0",
    "numba==0.60.0",
    "ruff==0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
]
analytics = [
    "duckdb>=1.0.0",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "akshare.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "baostock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cvxpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-x -q --tb=short"
asyncio_default_fixture_loop_scope = "function"
